--- a/webpages/chatroom/index.html
+++ b/webpages/chatroom/index.html
@@ -16,5 +16,5 @@
     </div>
 </body>
 <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
-<script src="./scripts/index.js"></script>
+<script src="/scripts/client/chatroom/index.js"></script>
 </html>
