I dont wanna describe

--- a/webpages/index.html
+++ b/webpages/index.html
@@ -11,4 +11,5 @@
     <p>尽管这和你大抵没什么关系，是的...</p>
     <a href="./chatroom/index.html">实时聊天室</a>
 </body>
+<script src="/scripts/shared/utils/cookie.js"></script>
 </html>
