--- a/webpages/users/login.html
+++ b/webpages/users/login.html
@@ -80,5 +80,6 @@
 </body>
 <script src="/scripts/shared/utils/hash.js"></script>
 <script src="/scripts/client/utils/post.js"></script>
+<script src="/scripts/client/utils/cookie.js"></script>
 <script src="/scripts/client/users/login.js"></script>
 </html>
