--- a/webpages/index.html
+++ b/webpages/index.html
@@ -9,7 +9,8 @@
 <body>
     <p>我知道我总是大换血，但这意味着我超大的技术力导数</p>
     <p>尽管这和你大抵没什么关系，是的...</p>
-    <a href="./chatroom/index.html">实时聊天室</a>
+    <div><a href="./chatroom/index.html">实时聊天室</a></div>
+    <div><a href="./users/login.html">登录&注册</a></div>
 </body>
 <script src="/scripts/shared/utils/cookie.js"></script>
 </html>
