I dont wanna describe

--- a/webpages/chatroom/index.html
+++ b/webpages/chatroom/index.html
@@ -156,8 +156,7 @@
 <script src="/scripts/client/utils/post.js"></script>
 <script src="/scripts/shared/utils/hash.js"></script>
 <script src="/node_modules/socket.io/client-dist/socket.io.js"></script>
-<script> const socket = io(); </script>
-<script src="/scripts/client/users/reset_token.js"></script>
+<!-- <script> const socket = io(); </script> -->
 <script src="/scripts/client/chatroom/index.js"></script>
 
 <!--(AIed) messages变化时自动翻到最下面-->
