I dont wanna describe

--- a/webpages/users/signup.html
+++ b/webpages/users/signup.html
@@ -80,6 +80,9 @@
                 <div class="error-message" id="inviting_codeError"></div>
             </div>
             <button type="submit">注册</button>
+            <div>
+                <a href="/users/unregister.html">注销通道</a>
+            </div>
         </form>
     </div>
 </body>
