I dont wanna describe

--- a/webpages/chatroom/index.html
+++ b/webpages/chatroom/index.html
@@ -145,7 +145,7 @@
         <div id="messages"></div>
         <div id="input-container">
             <!-- <input type="text" placeholder="用户名" id="username" required> -->
-            <input type="text" placeholder="聊点什么..." id="input" onkeydown="if(event.keyCode==13){document.getElementById('send').click()}" required>
+            <input type="text" placeholder="聊点什么... (发送“::help”查看指令帮助)" id="input" onkeydown="if(event.keyCode==13){document.getElementById('send').click()}" required>
             <button id="send">发送</button>
         </div>
     </div>
