--- a/webpages/index.html
+++ b/webpages/index.html
@@ -11,6 +11,7 @@
     <p>尽管这和你大抵没什么关系，是的...</p>
     <div><a href="./chatroom/index.html">实时聊天室</a></div>
     <div><a href="./users/login.html">登录&注册</a></div>
+    <div><a href="./shellfish_running/matching.html">shellfish赛跑</a></div>
 </body>
 <script src="/scripts/shared/utils/cookie.js"></script>
 </html>
